// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KDropdownMenu allows slotting content 1`] = `
<div class="k-dropdown k-dropdown-menu">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" data-testid="k-dropdown-menu-popover">
    <div label="" data-testid="k-dropdown-trigger" class="k-dropdown-trigger dropdown-trigger"><button>Click Me!</button></div>
    <div id="test-popover-id-1234" role="region" class="k-popover k-dropdown-popover mt-1 undefined hide-caret" style="width: 200px; max-width: 350px; max-height: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <ul data-testid="k-dropdown-list" class="k-dropdown-list dropdown-list"><span>I am slotted baby!</span></ul>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`KDropdownMenu matches snapshot 1`] = `
<div class="k-dropdown k-dropdown-menu">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" data-testid="k-dropdown-menu-popover">
    <div label="" data-testid="k-dropdown-trigger" class="k-dropdown-trigger dropdown-trigger">
      <div>
        <!---->
      </div>
    </div>
    <div id="test-popover-id-1234" role="region" class="k-popover k-dropdown-popover mt-1 undefined hide-caret" style="width: 200px; max-width: 350px; max-height: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <ul data-testid="k-dropdown-list" class="k-dropdown-list dropdown-list"></ul>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`KDropdownMenu renders disabled props when passed 1`] = `
<div class="k-dropdown k-dropdown-menu">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" data-testid="k-dropdown-menu-popover">
    <div id="3160e4b1-136d-11ed-9ddc-a1b90be1e26f" aria-controls="3160e4b0-136d-11ed-9ddc-a1b90be1e26f" role="button" class="k-dropdown-trigger dropdown-trigger">
      <div><button type="button" class="k-button k-dropdown-btn medium rounded primary" disabled="disabled" data-testid="k-dropdown-btn">
          <!---->
          Click me
          <!----></button></div>
      <div id="3160e4b0-136d-11ed-9ddc-a1b90be1e26f" role="region" class="k-popover kooltip mt-2  hide-caret" style="width: auto; max-width: 240px; max-height: auto; display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <div role="tooltip">A sweet tooltip</div>
        </div>
        <!---->
      </div>
    </div>
    <div id="test-popover-id-1234" role="region" class="k-popover k-dropdown-popover mt-1 undefined hide-caret" style="width: 200px; max-width: 350px; max-height: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <ul data-testid="k-dropdown-list" class="k-dropdown-list dropdown-list">
          <li data-testid="k-dropdown-item-Props" class="k-dropdown-item w-100" label="Props">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Props</div>
          </li>
          <li data-testid="k-dropdown-item-Slots" class="k-dropdown-item w-100" label="Slots">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Slots</div>
          </li>
          <li data-testid="k-dropdown-item-Top" class="k-dropdown-item w-100" label="Top">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Top</div>
          </li>
        </ul>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`KDropdownMenu renders props when passed 1`] = `
<div class="k-dropdown k-dropdown-menu">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" data-testid="k-dropdown-menu-popover">
    <div label="" data-testid="k-dropdown-trigger" class="k-dropdown-trigger dropdown-trigger">
      <div><button type="button" class="k-button k-dropdown-btn medium rounded primary" data-testid="k-dropdown-btn">
          <!---->
          Drop it!
          <!----></button></div>
    </div>
    <div id="test-popover-id-1234" role="region" class="k-popover k-dropdown-popover mt-1 undefined hide-caret" style="width: 200px; max-width: 350px; max-height: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <ul data-testid="k-dropdown-list" class="k-dropdown-list dropdown-list">
          <li data-testid="k-dropdown-item-Props" class="k-dropdown-item w-100" label="Props">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Props</div>
          </li>
          <li data-testid="k-dropdown-item-Slots" class="k-dropdown-item w-100" label="Slots">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Slots</div>
          </li>
          <li data-testid="k-dropdown-item-Top" class="k-dropdown-item w-100" label="Top">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Top</div>
          </li>
        </ul>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`KDropdownMenu renders with selected item 1`] = `
<div class="k-dropdown k-dropdown-menu">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" data-testid="k-dropdown-menu-popover">
    <div label="" data-testid="k-dropdown-trigger" class="k-dropdown-trigger dropdown-trigger">
      <div>
        <!---->
      </div>
    </div>
    <div id="test-popover-id-1234" role="region" class="k-popover k-dropdown-popover mt-1 undefined hide-caret" style="width: 200px; max-width: 350px; max-height: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <ul data-testid="k-dropdown-list" class="k-dropdown-list dropdown-list">
          <li data-testid="k-dropdown-item-Label-1" class="k-dropdown-item w-100 k-dropdown-selected-option" label="Label 1" value="label1">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">Label 1</div>
          </li>
          <li data-testid="k-dropdown-item-US-(United States)" class="k-dropdown-item w-100" label="US (United States)" value="us">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">US (United States)</div>
          </li>
          <li data-testid="k-dropdown-item-FR-(France)" class="k-dropdown-item w-100" label="FR (France)" value="fr">
            <div data-testid="k-dropdown-item-trigger" class="k-dropdown-item-trigger">FR (France)</div>
          </li>
        </ul>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
